<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/sensor_luz"
        android:icon="@drawable/ic_luz"
        android:title="@string/luz"/>
    <item
        android:id="@+id/sensor_bateria"
        android:icon="@drawable/ic_bateria"
        android:title="@string/bateria"/>
    <item
        android:id="@+id/sensor_google"
        android:icon="@drawable/ic_plugin_google"
        android:title="@string/google"/>

    <item
        android:id="@+id/sensor_ruido"
        android:icon="@drawable/ic_ruido_ambiente"
        android:title="@string/ruido"/>

    <item
        android:id="@+id/sensor_pantalla"
        android:icon="@drawable/ic_pantalla"
        android:title="@string/pantalla"/>

    </group>

</menu>